# evm-firehose-tracer-rs

./: .dockerignore  .gitignore  .sfreleaser  .sfreleaser.pre-release.sh  AGENTS.md  BASE_BLOCKS_CHECKLIST.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.localnet  Dockerfile.monad-split  Dockerfile.monad-unified  Dockerfile.reth  README.md  buf.gen.yaml  docker-compose-localnet.yml  docker-compose.monad-single.yml  docker-compose.monad-split.backup.yml  docker-compose.monad.yml  fireeth.base.yaml  fireeth.bootstrap.sh  fireeth.config.yaml  fireeth.monad.config.yaml  fireeth.optimism.genesis.json  fireeth.optimism.yaml  rust-toolchain.toml  setup-localnet.sh
.dev/: prost-to-quickprotobuf.md
.dev/infer-from-journal/: state.md
.dev/refactor-inspector/: state.md
.dev/sync-golang-track/: 7744bb7..7750eb7.md  7750eb7..a96a677.md  a96a677..c6eb9e2.md  c6eb9e2..30d8bce.md  de0dd7d..975cf50.md  state.md
.github/workflows/: ci.yml  docker.yml  release.yml
agents/: firehose-sync-with-golang.md
ethereum/: Cargo.toml
ethereum/src/: exex.rs  main.rs  prelude.rs
firehose/: Cargo.toml  TRACER_REFACTOR_PLAN.md
firehose-test/: Cargo.toml
firehose-test/src/: eip7702.rs  lib.rs  mock_state.rs  testing_helpers.rs  tracer_tester.rs
firehose-test/tests/: tracer_balance_test.rs  tracer_block_header_test.rs  tracer_block_level_test.rs  tracer_block_test.rs  tracer_call_test.rs  tracer_calls_test.rs  tracer_code_test.rs  tracer_create_nonce_test.rs  tracer_create_test.rs  tracer_deferred_test.rs  tracer_delegation_test.rs  tracer_executed_code_test.rs  tracer_fire_block_format_test.rs  tracer_flash_block_test.rs  tracer_gas_test.rs  tracer_genesis_test.rs  tracer_integration_test.rs  tracer_keccak_test.rs  tracer_log_test.rs  tracer_nonce_test.rs  tracer_on_call_test.rs  tracer_opcode_gas_test.rs  tracer_opcode_test.rs  tracer_receipt_logs_test.rs  tracer_receipt_test.rs  tracer_reth_test.rs  tracer_setcode_test.rs  tracer_skipped_block_test.rs  tracer_storage_test.rs  tracer_suicide_test.rs  tracer_system_call_test.rs  tracer_transaction_edge_cases_test.rs  tracer_transaction_test.rs  tracer_trx_test.rs  tracer_trx_types_test.rs
firehose-tracer/: Cargo.toml
firehose-tracer-test/: Cargo.toml
firehose-tracer-test/src/: eip7702.rs  lib.rs  mock_state.rs  testing_helpers.rs  tracer_tester.rs
firehose-tracer-test/tests/: tracer_balance_test.rs  tracer_block_header_test.rs  tracer_block_level_test.rs  tracer_block_test.rs  tracer_call_test.rs  tracer_calls_test.rs  tracer_code_test.rs  tracer_create_nonce_test.rs  tracer_create_test.rs  tracer_deferred_test.rs  tracer_delegation_test.rs  tracer_emission_mode_test.rs  tracer_executed_code_test.rs  tracer_fire_block_format_test.rs  tracer_flash_block_test.rs  tracer_genesis_test.rs  tracer_integration_test.rs  tracer_invalid_state_panic_test.rs  tracer_keccak_test.rs  tracer_log_test.rs  tracer_nonce_test.rs  tracer_on_call_test.rs  tracer_opcode_test.rs  tracer_receipt_logs_test.rs  tracer_receipt_test.rs  tracer_reth_test.rs  tracer_setcode_test.rs  tracer_skipped_block_test.rs  tracer_storage_test.rs  tracer_suicide_test.rs  tracer_system_call_test.rs  tracer_transaction_edge_cases_test.rs  tracer_transaction_test.rs  tracer_trx_test.rs  tracer_trx_types_test.rs
firehose-tracer/src/: callstack.rs  config.rs  deferred_call_state.rs  emission.rs  finality.rs  lib.rs  logging.rs  mapper.rs  open_callstack.rs  ordinal.rs  printer.rs  tracer.rs  types.rs  utils.rs  version.rs
firehose-tracer/src/pb/: extensions.rs  sf.ethereum.transform.v1.rs  sf.ethereum.type.v2.rs
firehose/src/: callstack.rs  config.rs  deferred_call_state.rs  eip7702.rs  finality.rs  inspector.rs  lib.rs  logging.rs  mapper.rs  open_callstack.rs  ordinal.rs  printer.rs  tracer.rs  tracer_checks.rs  types.rs  utils.rs  version.rs
monad/: Cargo.toml  README.md  buf.gen.yaml
monad-plugin/: Cargo.toml  buf.gen.yaml
monad-plugin/proto/: monad_events.proto
monad-plugin/src/: event_processor.rs  lib.rs  monad_consumer.rs
monad-plugin/src/pb/: mod.rs
monad/pb/src/: sf.monad.events.v1.rs
monad/src/: config.rs  event_mapper.rs  finality.rs  lib.rs  main.rs  ordinal.rs  printer.rs  ring_consumer.rs  tracer.rs
monad/tests/: integration_tests.rs  monad_tracer_test.rs
optimism/: Cargo.toml
optimism/src/: exex.rs  main.rs  prelude.rs
pb/: Cargo.toml
pb/src/: extensions.rs  lib.rs  pb.rs  sf.ethereum.transform.v1.rs  sf.ethereum.type.v2.rs
reth/: Cargo.toml
reth-base/: Cargo.toml
reth-base/src/: main.rs  prelude.rs
reth/src/: lib.rs  main.rs  prelude.rs
reth/src/exex/: chain_revert_overlay.rs  inspector.rs  mapper.rs  mod.rs  runner.rs
shared/: Cargo.toml
shared/src/: exex.rs  lib.rs  prelude.rs
src/: exex.rs  main.rs  prelude.rs
src/firehose/: inspector.rs  logging.rs  mapper.rs  mod.rs  ordinal.rs  printer.rs  tracer.rs  tracer_checks.rs
src/pb/: extensions.rs  mod.rs  sf.ethereum.substreams.v1.rs
