[workspace]
members = ["firehose-tracer", "firehose-tracer-test", "reth", "reth-base"]
exclude = ["resources"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
# Internal workspace crates
firehose-tracer = { version = "5.0.0-rc.0", path = "firehose-tracer" }
firehose-tracer-test = { path = "firehose-tracer-test" }

# Alloy dependencies
alloy-consensus = "1.5"
alloy-eips = "1.5"
alloy-genesis = "1.5"
alloy-primitives = "1.5"
alloy-rlp = "0.3"

# Base node dependencies
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
eyre = "0.6"
futures-util = "0.3"
hex = "0.4"
num_enum = "0.7"
prost = "0.14"
prost-types = "0.14"
prost-build = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6"
base-execution-cli = { git = "https://github.com/base/base", tag = "v0.7.3" }
base-node-runner = { git = "https://github.com/base/base", tag = "v0.7.3" }
base-node-core = { git = "https://github.com/base/base", tag = "v0.7.3" }

[patch.crates-io]
# Patch alloy-evm to inspect system calls (EIP-4788, EIP-2935, etc.) through the
# Inspector when inspect mode is enabled, matching what transact_raw already does.
# See https://github.com/alloy-rs/evm/pull/323 for tentative of upstreaming this change.
alloy-evm = { git = "https://github.com/streamingfast/evm.git", branch = "sf/v0.27.3" }

# This is needed otherwise we get flooding of debug logs around a problem that seems to happen in Reth directly.
# This is about wrong execution pool and cool be related to ExEx in general (not just our version). We will
# need to investigate to ensure we are not doing wrong thing that could hinder threading in production.
[profile.dev.package.reth-chain-state]

debug-assertions = false
