[workspace]
members = ["firehose-tracer", "firehose-tracer-test"]
exclude = ["resources"]
resolver = "2"

[workspace.package]
version = "5.0.0"
edition = "2021"

[workspace.dependencies]
# Internal workspace crates
firehose-tracer = { version = "5.0.0", path = "firehose-tracer" }
firehose-tracer-test = { path = "firehose-tracer-test" }

# Alloy dependencies
alloy-consensus = "1.5"
alloy-eips = "1.5"
alloy-genesis = "1.5"
alloy-primitives = "1.5"
alloy-rlp = "0.3"

# Other dependencies
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
eyre = "0.6"
futures-util = "0.3"
hex = "0.4"
num_enum = "0.7"
prost = "0.14"
prost-types = "0.14"
prost-build = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6"
