[package]
name = "ethereum"
version.workspace = true
edition.workspace = true

[[bin]]
name = "reth-firehose-tracer"
path = "src/main.rs"

[dependencies]
firehose.workspace = true
pb.workspace = true

reth.workspace = true
reth-exex.workspace = true
reth-node-ethereum.workspace = true
reth-tracing.workspace = true
reth-cli-util.workspace = true
reth-revm.workspace = true
reth-evm.workspace = true

alloy-genesis.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-rlp.workspace = true
alloy-eips.workspace = true
clap.workspace = true
eyre.workspace = true
futures-util.workspace = true
