[package]
name = "ethereum"
version.workspace = true
edition.workspace = true

[[bin]]
name = "reth-firehose-tracer"
path = "src/main.rs"

[dependencies]
# Internal workspace crates
firehose.workspace = true
pb.workspace = true
shared.workspace = true

# Ethereum-specific Reth dependencies
reth.workspace = true
reth-node-ethereum.workspace = true
reth-cli-util.workspace = true

# CLI dependencies
clap.workspace = true
