[package]
name = "firehose-tracer"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme = "../README.md"

[dependencies]
# Alloy dependencies
alloy-genesis.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-rlp.workspace = true
alloy-eips.workspace = true

# Other dependencies
rbase64.workspace = true
eyre.workspace = true
hex.workspace = true
k256 = { version = "0.13", features = ["ecdsa"] }
num_enum.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
