[package]
name = "firehose"
version = "5.0.0-rc.0"
edition.workspace = true

[dependencies]
pb.workspace = true

# Alloy dependencies
alloy-genesis.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-rlp.workspace = true
alloy-eips.workspace = true

# Other dependencies
base64.workspace = true
eyre.workspace = true
hex.workspace = true
k256 = { version = "0.13", features = ["ecdsa"] }
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
