[package]
name = "monad-plugin"
version.workspace = true
edition.workspace = true

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
monad-exec-events = { workspace = true }
monad-event-ring  = { workspace = true }
