[package]
name = "monad-plugin"
version = "0.1.0"        # Going away
edition.workspace = true

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
monad-exec-events = { workspace = true }
monad-event-ring = { workspace = true }
