[package]
name = "monad-tracer"
version.workspace = true
edition.workspace = true

[[bin]]
name = "monad-firehose-tracer"
path = "src/main.rs"

[dependencies]
pb = { workspace = true }
monad-plugin = { path = "../monad-plugin" }
eyre = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
monad-exec-events = { workspace = true }
monad-event-ring = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
alloy-primitives = { workspace = true }
