[package]
name = "optimism"
version.workspace = true
edition.workspace = true

[[bin]]
name = "op-reth-firehose-tracer"
path = "src/main.rs"

# [[bin]]
# name = "test-flashblocks"
# path = "src/bin/test_flashblocks.rs"

# [[bin]]
# name = "debug-flashblocks"
# path = "src/bin/debug_flashblocks.rs"

[dependencies]
# Internal workspace crates
firehose.workspace = true
pb.workspace = true
shared.workspace = true

# OP-Reth-specific dependencies
reth-optimism-cli.workspace = true
reth-optimism-node.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-flashblocks.workspace = true
reth-optimism-primitives.workspace = true

# Core Reth dependencies
reth.workspace = true
reth-cli-util.workspace = true

# CLI dependencies
clap.workspace = true

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util.workspace = true
url = "2"
eyre.workspace = true

# WebSocket and compression for flashblocks debugging
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde_json.workspace = true
brotli = "7"
